--- a/child/other.html
+++ b/child/other.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <title>Other</title>
+      <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -13,14 +13,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../about.html">About</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="child/other.html">Other</a>
+            <a class="nav-link" href="child/other.html">Other <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -28,9 +28,8 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Welcome</h1>
-        <p class="lead">This is the Welcome page</p>
-        <img src="image.png" class="img-fluid" alt="image" />
+        <h1 class="display-4">Other</h1>
+        <p class="lead">This is the Other page</p>
       </div>
     </div>
   </body>
